--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -1,10 +1,10 @@
 
 .loader{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 60px);
     text-align: center;
 }
 
 .loader span{
-    line-height: 100vh;
+    line-height: calc(100vh - 60px);
 }
