--- a/src/components/item-list/itemList.module.css
+++ b/src/components/item-list/itemList.module.css
@@ -5,14 +5,11 @@
 }
 
 .item{
-    width: 32%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     margin-right: 20px;
     margin-bottom: 20px;
-}
-.item:nth-child(3n){
-    margin-right: 0;
 }
 
 .image {
@@ -56,3 +53,23 @@
     font-size: 18px;
 }
 
+@media screen and (max-width: 1033px ){
+    .item{
+        width: 47%;
+    }
+
+    .item:nth-child(2n) {
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 550px ){
+    .item {
+        width: 80%;
+    }
+
+    .item:nth-child(1n) {
+        margin: 20px auto;
+    }
+
+}
